oauth2-proxy/overlays/monitor/service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy-monitor
spec:
  selector:
    app: oauth2-proxy-monitor
